k8s/namespaces/media/rtorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rtorrent
  namespace: media
  labels:
    app.kubernetes.io/name: rtorrent
    app.kubernetes.io/managed-by: flux
    app.kubernetes.io/egress: openvpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rtorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rtorrent
        app.kubernetes.io/managed-by: flux
        app.kubernetes.io/egress: openvpn
    spec:
      runtimeClassName: youki
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.64.0.1
        options:
          - name: ndots
            value: "1"
      containers:
        - name: rtorrent
          image: docker.io/crazymax/rtorrent-rutorrent:latest@sha256:d11888723fd5fbf73253e3757935f75e92028e44b67a203dd2833ef95fcd0529
          ports:
            - containerPort: 8080
            - containerPort: 8000
            - containerPort: 9000
            - containerPort: 50000
            - containerPort: 6881
              protocol: UDP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "2000m"
              memory: "8Gi"
          volumeMounts:
            - name: config
              mountPath: /data
            - name: media
              mountPath: /downloads
              subPath: downloads
            - name: passwd
              mountPath: /passwd
            - name: rtorrent-credentials
              mountPath: /secrets/rpc.htpasswd
              subPath: rpc.htpasswd
              readOnly: true

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: rtorrent-config
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: passwd
          emptyDir: {}
        - name: rtorrent-credentials
          secret:
            secretName: rtorrent-secrets
            items:
              - key: rpc.htpasswd
                path: rpc.htpasswd
