k8s/namespaces/media/rtorrent/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-rtorrent-https
  namespace: media
  labels:
    app.kubernetes.io/name: rtorrent
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rtorrent.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: authentik
          namespace: ingress
      services:
        - name: rtorrent
          port: 8080
  tls: 
    secretName: oglesby-io-tls
